--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Kavin</h1>
-    <h2>Nivak is a bowler and a bolwer</h2>
+    <h2>Nivak is a bowler and a bolwer and </h2>
+    <h2>Nivak is a bowler and a bolwer </h2>
 </body>
 </html>
